# PixWatch-DL

./: README.md  pyproject.toml
pixwatch_dl/: backfill.py  config.py  easy_runner.py  gallery.py  http_client.py  limited.py  logging_setup.py  main.py  once.py  poller.py  telegram.py
pixwatch_dl/tests/: test_core.py
